Closed
Bug 646060
Opened 14 years ago
Closed 14 years ago
TI: Assertion failure: consistent, at ./methodjit/Compiler.cpp:6040
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
The following code asserts on TI tip (run with -m -n -a), tested on 64 bit: function f0(i) { switch(i) { case "a": case { TITLE: false, VERSION: false }('test') : } } new TestCase(SECTION, 'switch statement', f0("a"), "ab*");
Comment 1•14 years ago
|
||
RegisterAllocation::synced, used to determine whether we need rejoin code when jumping from after a stub call to a join point, did not account for registers from inline parents that need to be preserved at the join point. http://hg.mozilla.org/projects/jaegermonkey/rev/d1599f5fc1fc
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 2•12 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug646060.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•