[INFER] RegisterAllocation::synced should account for parentRegs, bug 646060.